Search engine buttons does not look good after bug 1733569
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox92 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | unaffected |
firefox95 | --- | verified |
People
(Reporter: Fanolian+BMO, Assigned: emilio)
References
(Regression)
Details
(Keywords: nightly-community, regression, reproducible)
Attachments
(4 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:95.0) Gecko/20100101 Firefox/95.0
Build ID: 20211005094529
Steps to reproduce
- In a new profile, open address bar.
- (Optional) Add Search bar to toolbar. Open Search bar.
Actual result
Search engine buttons does not look good. Please see the attached screenshot.
Regression
Last good Nightly: 2021-10-04
First bad Nightly: 2021-10-05
pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cc37b1400a58429d7d98556f6f64cd9fd2d73724&tochange=0c84f40112a50d2ac1a4a9f714191b60f0eaaec1
Nightly changelog: https://mrotherguy.github.io/fx-nightly-changelog/?date=2021-10-05
Bisecting autoland builds:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=1ff04e10cd2318b494c0f05777cd80291289d127&tochange=d39b23efefe7e7d89d8dfd0ba188ad6af2b0a9ed
This is regressed by bug 1733569.
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
Now that windows is going to support dark colors, we want to make it
behave like other platforms in this regard.
Having a single pref for this seems better.
Depends on D127623
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Comment 5•4 years ago
|
||
bugherder |
Comment 6•4 years ago
|
||
bugherder |
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 7•4 years ago
|
||
Please add an uplift request as this impacts the Customize page on Beta as well.
The issue there is that the checkbox for 'Title Bar' from Customize page is not visible while using one of the new themes (Elemental-Balanced theme). After a quick investigation using mozregression, the push log that fixed the issue is this https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ef7b596bb385f46280eb1492009bf8fb541e17db&tochange=8ad879d71dc3f5a69275aa2eb28ba74a492135c5
For more details please see the latest attachment.
Assignee | ||
Comment 8•4 years ago
|
||
That seems unrelated to this bug? I guess bug 1734226 fixed this by making that theme use dark system colors, but I'm not sure we should uplift all the dark mode work I'm doing to 94. Harry?
Comment 9•4 years ago
|
||
(In reply to Monica Chiorean from comment #7)
The issue there is that the checkbox for 'Title Bar' from Customize page is not visible while using one of the new themes (Elemental-Balanced theme). After a quick investigation using mozregression, the push log that fixed the issue is this https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ef7b596bb385f46280eb1492009bf8fb541e17db&tochange=8ad879d71dc3f5a69275aa2eb28ba74a492135c5
It was probably bug 1734297 then, which is also in that push log, that fixed your issue.
Comment 10•4 years ago
|
||
I filed bug 1734948 for the Elemental-Balanced theme issue.
Updated•4 years ago
|
Comment 11•4 years ago
•
|
||
Clearing needinfo since Emilio and I chatted about not uplifting most Windows dark mode work to 94.
Updated•4 years ago
|
Comment 12•4 years ago
|
||
I have reproduced this issue using Firefox 99.0a1 on Win 10 x64.
I can confirm this issue is fixed, I verified using Firefox 95.0b3 on Win 10 x64, macOS 10.15 and Ubuntu 18.04 x64.
Description
•