Bug 1734226 - Use a single pref to determine whether system colors follow the Firefox theme. r=desktop-theme-reviewers,dao

Now that windows is going to support dark colors, we want to make it
behave like other platforms in this regard.

Having a single pref for this seems better.

Differential Revision: https://phabricator.services.mozilla.com/D127624